--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -60,7 +60,7 @@
   <button
     type="submit"
     class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
-    [disabled]="!form.valid"
+    [disabled]="!form.valid || inSubmission()"
   >
     Submit
   </button>
