--- a/src/app/views/upload/upload.component.html
+++ b/src/app/views/upload/upload.component.html
@@ -2,6 +2,22 @@
   <div class="rounded relative flex flex-col">
     <div class="font-bold mb-6">Upload Video</div>
 
+    @if (!ffmpegService.isReady()) {
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke-width="1.5"
+      stroke="currentColor"
+      class="size-24 text-center flex my-12 mx-auto animate-spin"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99"
+      />
+    </svg>
+    } @else {
     <!-- Upload Dropbox -->
     @if (!nextStep()) {
     <div
@@ -18,6 +34,23 @@
       class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
     >
       <h5>Drop your file here (mp4 only!)</h5>
+      @if( ffmpegService.isRunning() ){
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="size-16 animate-spin mx-auto mt-8"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99"
+        />
+      </svg>
+
+      }
     </div>
     } @else { @if(showAlert()) {
     <app-alert [color]="alertColor()">
@@ -33,15 +66,20 @@
       <!-- Screenshots -->
       <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-        <div class="border-8 cursor-pointer border-green-400">
-          <img src="assets/img/1.jpg" />
+        @for (screenshot of screenshots(); track $index) {
+        <div
+          class="border-8 cursor-pointer"
+          [ngClass]="{
+            'border-green-400': screenshot === selectedScreenshot(),
+            'border-transparent': screenshot !== selectedScreenshot()
+          }"
+        >
+          <img
+            [src]="screenshot"
+            (click)="selectedScreenshot.set(screenshot)"
+          />
         </div>
-        <div class="border-8 cursor-pointer border-transparent">
-          <img src="assets/img/2.jpg" />
-        </div>
-        <div class="border-8 cursor-pointer border-transparent">
-          <img src="assets/img/3.jpg" />
-        </div>
+        }
       </div>
 
       <!-- Title -->
@@ -67,6 +105,6 @@
         </button>
       </div>
     </form>
-    }
+    } }
   </div>
 </section>
